# AIE8

01_Prototyping Best Practices & Vibe Check/: assignment-answers.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb  Pythonic_RAG_Assignment_backup.ipynb  arch.md  assignment-answers.md  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: enhanced_vectordatabase.py  pdf_utils.py  youtube_utils.py
04_Production_RAG/: Activity_Answers.md  Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  Graph_Visualization_Fix.md  Ollama_Setup_and_Testing.ipynb  Question_2_Answer.md  Video_Transcript_4_Minutes.md  pyproject.toml
